update readme and docs swagger
