# storage/api-docs/api-docs.json
@@ -204,7 +204,7 @@
         "/api/notes": {
             "get": {
                 "tags": [
-                    "Notes"
+                    "Заметки"
                 ],
                 "summary": "Получить все заметки пользователя",
                 "description": "Отображает список всех заметок, принадлежащих зарегистрированному пользователю.",
@@ -273,7 +273,7 @@
             },
             "post": {
                 "tags": [
-                    "Notes"
+                    "Заметки"
                 ],
                 "summary": "Создать новую заметку",
                 "description": "Создаёт новую заметку для авторизованного пользователя.",
@@ -374,7 +374,7 @@
         "/api/notes/{id}": {
             "put": {
                 "tags": [
-                    "Notes"
+                    "Заметки"
                 ],
                 "summary": "Обновить заметку",
                 "description": "Обновляет информацию о заметке.",
@@ -524,7 +524,7 @@
             },
             "delete": {
                 "tags": [
-                    "Notes"
+                    "Заметки"
                 ],
                 "summary": "Удалить заметку",
                 "description": "Удаляет заметку пользователя.",
